common: Add proper support for Virtual Threads (Java 21)
Currently, running both server and clients from Virtual Threads is
impossible as they may block each other.

Modify the blocking code to use LockSupport.park/unpark internally, when
necessary.

For now use a naive poll implementation that spawns individual poll
syscalls on system threads (later, we will use epoll/kqueue when
available).

Improve the MassiveParallelTest to exercise the new code.