@@ -17,23 +17,63 @@
  */
 package org.newsclub.net.unix;
 
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.locks.LockSupport;
 
+import org.codehaus.mojo.animal_sniffer.IgnoreJRERequirement;
+
+/**
+ * Helper class to support certain Thread-specific features.
+ *
+ * @author Christian Kohlschütter
+ */
+@IgnoreJRERequirement // see src/main/java20
 public final class ThreadUtil {
   private ThreadUtil() {
     throw new IllegalStateException("No instances");
   }
 
+  /**
+   * Checks if the current {@link Thread} is to be considered a virtual thread.
+   *
+   * @return {@code true} if so.
+   */
   public static boolean isVirtualThread() {
     return false;
   }
 
+  /**
+   * Checks if virtual threads are considered to be supported (and therefore if special support
+   * should be enabled).
+   *
+   * @return {@code true} if so.
+   */
   public static boolean isVirtualThreadSupported() {
     return false;
   }
 
-  public static ExecutorService newVirtualThreadOrCachedThreadPoolExecutor() {
-    return Executors.newCachedThreadPool();
+  /**
+   * Returns a new "virtual thread per task executor".
+   *
+   * @return The new executor service.
+   * @throws UnsupportedOperationException if not possible
+   */
+  public static ExecutorService newVirtualThreadPerTaskExecutor() {
+    throw new UnsupportedOperationException("Virtual threads are not supported by this JVM");
+  }
+
+  /**
+   * Ensures that the given operation is being executed on a system thread. If the current thread is
+   * a virtual thread, the operation is executed <em>synchronously</em> via
+   * {@link CompletableFuture#runAsync(Runnable)}: the virtual thread is suspended during that
+   * operation, and subsequently resumed.
+   *
+   * @param op The operation to run.
+   * @throws InterruptedException on interrupt.
+   */
+  public static void runOnSystemThread(Runnable op) throws InterruptedException {
+    op.run();
   }
 }
